# VoiceChange

./: .gitattributes  .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zhangpan/myvoicechange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common.cpp  common_platform.cpp  effects.cpp  voice_change.cpp
app/src/main/java/com/zhangpan/myvoicechange/: MainActivity.java  VoiceChangeActivity.java  VoiceChangeUtils.java
app/src/main/res/layout/: activity_main.xml  activity_voice_change.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/zhangpan/myvoicechange/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
